# sail

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake-modules/: cmd.sh  protobuf.cmake  redis.cmake  rmutil.cmake  vowpal.cmake
src/: CMakeLists.txt
src/codegen/: CMakeLists.txt  options.proto  redis_codegen.cpp
src/sail/: redis_command.cpp  redis_command.h  redismodule.c  redismodule.h  sail_lib.cpp  sail_module.cpp  sail_rei.cpp  sail_rei.h
src/sail/api/: CMakeLists.txt  redismodule.c  vowpal.proto  vowpal_service_impl.cpp  vowpal_service_impl.h  vowpalmodelimpl.cpp  vowpalmodelimpl.h  vowpalserviceimpl.cpp  vowpalserviceimpl.h  wrapper.h
src/sail/context/: context.cpp  context.h
src/sail/vw/: vw_wrapper.cpp  vw_wrapper.h
test/: CMakeLists.txt
test/sail/: test_pbtypes.py  test_rei.py  test_vw.py
